# dbt-tags

./: .gitignore  .pre-commit-config.yaml  .sqlfluffignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dbt_project.yml  mkdocs.yml  package-lock.yml  packages.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-pr.yml  docs-beta.yml  docs.yml  stale.yml
1.0/: 404.html  contributing.html  getting-started.html  hooks.py  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.0-beta/: 404.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.0-beta/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.0-beta/search/: search_index.js  search_index.json
1.0/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.0/search/: search_index.js  search_index.json
1.1/: 404.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.1/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.10/: 404.html  config-iceberg-support.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.10/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.10/search/: search_index.js  search_index.json
1.2/: 404.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.2/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.2/search/: search_index.js  search_index.json
1.3/: 404.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.3/assets/js/: custom.js
1.3/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.3/search/: search_index.js  search_index.json
1.4/: 404.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.4/assets/js/: custom.js
1.4/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.6/: 404.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.6/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.7/: 404.html  config-iceberg-support.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.7/assets/js/: termynal.js
1.7/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.7/overrides/: main.html
1.7/search/: search_index.js
1.9/: 404.html  config-iceberg-support.html  contributing.html  getting-started.html  index.html  sitemap.xml  util-drop-tag.html  util-unset-masking-policy.html
1.9/assets/css/: termynal.css
1.9/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.9/search/: search_index.json
docs/: config-iceberg-support.md  contributing.md  getting-started.md  index.md  util-drop-tag.md  util-unset-masking-policy.md
integration_tests/: dbt_project.yml  package-lock.yml  packages.yml
integration_tests/ci/: ci.profiles.yml  sf-init.sql
integration_tests/macros/mp-ddl/: create_masking_policy__pii_amount.sql  create_masking_policy__pii_name.sql  create_masking_policy__pii_null.sql
integration_tests/models/: customers.sql  customers.yml  orders.yml  sources.yml  stg_customers.sql  verify_masking_policies_creation.sql  verify_masking_policies_creation.yml
integration_tests/models/behavior/: verify_if_masking_policies_applied_correctly.sql  verify_if_masking_policies_applied_correctly.yml  verify_if_masking_policies_created_correctly.sql  verify_if_masking_policies_created_correctly.yml  verify_if_tags_applied_correctly.sql  verify_if_tags_applied_correctly.yml  verify_if_tags_created_correctly.sql  verify_if_tags_created_correctly.yml
integration_tests/models/with_quoting/: sources.yml
integration_tests/tests/cleanup/: verify_if_drop_tags_correctly.sql  verify_if_unapply_mps_correctly.sql
macros/apply-tags/: apply_column_tags.sql  apply_column_tags.yml  apply_column_tags_query.sql  apply_column_tags_query.yml  apply_mps_to_tags.sql  apply_mps_to_tags.yml  apply_source_column_tags.sql  apply_source_column_tags.yml  apply_tags.sql  unapply_mps_from_tags.sql  unapply_mps_from_tags.yml  unapply_mps_to_tags.sql
macros/resources/apply-mp-to-tags/: apply_mp_to_column_tags.sql  unapply_mp_to_column_tags.sql
macros/resources/masking-policies/: create_masking_policies.sql  create_masking_policies.yml  drop_masking_policies.sql
macros/resources/masking-policies/sample-ddl/: create_masking_policy__pii_amount.sql  (+1 more)
macros/resources/tags/: create_tags.sql  create_tags.yml  drop_tags.sql  drop_tags.yml
macros/utilities/: get_namespace.sql  get_namespace.yml
macros/utils/: extract_dbt_object_tags.sql  extract_dbt_object_tags.yml  get_adapter_tags.sql  get_adapter_tags.yml  get_dbt_column_tags.sql  get_dbt_column_tags.yml  get_dbt_relation_tags.sql  get_dbt_relation_tags.yml  get_dbt_tags.sql  get_dbt_tags.yml  get_masking_policy_for_tag.sql  get_masking_policy_for_tag.yml  get_resource_ns.sql  get_resource_ns.yml  get_table_type.sql  get_table_type.yml  is_allowed_tags.sql  is_allowed_tags.yml  log_apply_column_tags.sql  log_apply_column_tags.yml
macros/utils/logging/: log_info.sql  log_query.sql  log_warning.sql
